# portfolio

./: .gitignore  .prototools  Cargo.toml  Dioxus.toml  moon.yml  prompt-small.md  prompt.md  tailwind.css
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
.moon/: toolchain.yml  workspace.yml
assets/: tailwind.css
src/: app.rs  lib.rs  main.rs  router.rs
src/components/: contact.rs  experience_card.rs  experiences.rs  hero.rs  mod.rs  nav_bar.rs  project_card.rs  projects.rs
src/icons/: download.rs  external_link.rs  github.rs  linkedin.rs  mail.rs  mod.rs
src/pages/: home.rs  mod.rs  page_not_found.rs
src/views/: home.rs  mod.rs  navbar.rs
tests/: ui_tests.rs
